force-app/main/default/objects/Deflection_Question__c/Deflection_Question__c.object-meta.xml
<CustomObject>
    <description>Question Storage for delfection tree</description>
    <label>Deflection Question</label>
    <nameField>
        <displayFormat>DQ-{00000}</displayFormat>
        <label>Case Deflection Question Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deflection Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>