force-app/main/default/objects/Deflection_Question__c/fields/Message_to_Display_to_User__c.field-meta.xml
<CustomField>
    <fullName>Message_to_Display_to_User__c</fullName>
    <label>Message to Display to User</label>
    <type>TextArea</type>
</CustomField>