force-app/main/default/objects/Deflection_Question__c/fields/Parent_Question__c.field-meta.xml
<CustomField>
    <fullName>Parent_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The &quot;parent&quot; of this question</inlineHelpText>
    <label>Parent Question</label>
    <referenceTo>Deflection_Question__c</referenceTo>
    <relationshipName>Case_Deflection_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>