force-app/main/default/objects/Deflection_Question__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <description>The question that you would like displayed in the Tree</description>
    <inlineHelpText>The question that you would like displayed in the Tree</inlineHelpText>
    <label>Question</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>