force-app/main/default/objects/Deflection_Question__c/listViews/test_Deflection_Question.listView-meta.xml
<ListView>
    <fullName>test_Deflection_Question</fullName>
    <filterScope>Queue</filterScope>
    <label>test</label>
    <queue>test</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>